sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:8: error: not found: value m
      if ( getValeur(i) < M) {j=i;m = getValeur(i)}
                                  ^